--- a/src/CSAuto/GUIWindow.xaml
+++ b/src/CSAuto/GUIWindow.xaml
@@ -44,6 +44,7 @@
                             <StackPanel Orientation="Vertical">
                                 <CheckBox x:Name="StartUpCheck" Content="menu_startup" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=runAtStartUp}" Click="StartUpCheck_Click"/>
                                 <CheckBox x:Name="DarkThemeCheck" Content="menu_darktheme" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=darkTheme}" Click="DarkThemeCheck_Click"/>
+                                <CheckBox x:Name="PortableModeCheck" Content="menu_portablemode" Height="Auto" Click="PortableModeCheck_Click"/>
                                 <CheckBox Content="menu_autoclosecsauto" Height="Auto" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=autoCloseCSAuto}"/>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="title_color" FontSize="15" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center"/>
@@ -117,17 +118,32 @@
                     </ItemContainerTemplate>
                 </TabItem.HeaderTemplate>-->
                 <!--Example on how to add image to the left-->
-                <FlowDocumentScrollViewer x:Name="ChangeLogFlowDocument"
-                                  VerticalAlignment="Stretch"
-                                  HorizontalAlignment="Stretch"
-                                  VerticalScrollBarVisibility="Auto"
-                                  Margin="5">
-                    <FlowDocument>
-                        <Paragraph>
-                            <Run Text="Loading..."/>
-                        </Paragraph>
-                    </FlowDocument>
-                </FlowDocumentScrollViewer>
+                <Grid>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto"/>
+                        <RowDefinition Height="*"/>
+                    </Grid.RowDefinitions>
+                    <mahapps:DropDownButton Name="ChangeLogAlternatives"
+                        Content="menu_alternativelocations">
+                        <mahapps:DropDownButton.Items>
+                            <TextBlock Text="GitHub" MouseDown="OpenGithubChangelog_MouseDown"/>
+                            <TextBlock Text="menu_website" MouseDown="OpenWebSite_MouseDown"/>
+                        </mahapps:DropDownButton.Items>
+                    </mahapps:DropDownButton>
+                    <FlowDocumentScrollViewer x:Name="ChangeLogFlowDocument"
+                                                VerticalAlignment="Stretch"
+                                                HorizontalAlignment="Stretch"
+                                                VerticalScrollBarVisibility="Auto"
+                                                Margin="5"
+                                              Grid.Row="1">
+                        <FlowDocument>
+                            <Paragraph>
+                                <Run Text="Loading..."/>
+                            </Paragraph>
+                        </FlowDocument>
+                    </FlowDocumentScrollViewer>
+                </Grid>
+               
             </mahapps:MetroTabItem>
             <mahapps:MetroTabItem Header="menu_debug">
                 <Grid>
@@ -150,6 +166,7 @@
                             </MenuItem>
                         </Menu>
                     </DockPanel>
+                    <TextBlock x:Name="IsPortableText" Text="Portable: {}" Grid.Row="1" Grid.ColumnSpan="2"  VerticalAlignment="Bottom" Margin="0,0,0,15"/>
                     <TextBlock x:Name="lastRecieveTime" Text="Last recieve time from GSI" Grid.Row="1" Grid.ColumnSpan="2" VerticalAlignment="Bottom"/>
                     <TextBox x:Name="outputBox" IsReadOnly="True" Text="None" Grid.Row="2" Grid.ColumnSpan="3" VerticalScrollBarVisibility="Auto"/>
                     <TextBox x:Name="debugBox" IsReadOnly="True" Grid.Row="3" Grid.ColumnSpan="3" VerticalScrollBarVisibility="Auto"/>
