fix(gui): fix binding for auto buy enabled

--- a/src/CSAuto/GUIWindow.xaml
+++ b/src/CSAuto/GUIWindow.xaml
@@ -299,7 +299,7 @@
             </mahapps:MetroTabItem>
             <mahapps:MetroTabItem Header="{x:Static p:Strings.menu_autobuy}">
                 <Grid>
-                    <CheckBox Content="{x:Static p:Strings.text_enabled}" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=enableDiscordRPC}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,15,0,0"/>
+                    <CheckBox Content="{x:Static p:Strings.text_enabled}" IsChecked="{Binding Source={x:Static properties:Settings.Default},Path=autoBuyEnabled}" VerticalAlignment="Top" HorizontalAlignment="Left" Margin="0,15,0,0"/>
                     <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Top">
                         <TabControl Panel.ZIndex="1" x:Name="AutoBuyTab" VerticalAlignment="Top" SelectionChanged="AutoBuyTab_SelectionChanged" mahapps:TabControlHelper.Underlined="SelectedTabItem" mahapps:TabControlHelper.UnderlinePlacement="Bottom" Height="48">
                             <mahapps:MetroTabItem Header="{x:Static p:Strings.team_ct}"/>
