--- a/src/CSAuto/DebugSettings.xaml
+++ b/src/CSAuto/DebugSettings.xaml
@@ -13,10 +13,10 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
         <StackPanel Orientation="Vertical" Grid.Row="0" Grid.Column="0">
@@ -30,7 +30,7 @@
                 <TextBox x:Name="ActiveColorBlue" PreviewTextInput="NumberValidationTextBox" Margin="15,0,0,0" Width="50" MaxLength="3"/>
             </StackPanel>
         </StackPanel>
-        <StackPanel Orientation="Vertical" Grid.Row="0" Grid.Column="1">
+        <StackPanel Orientation="Vertical" Grid.Row="1" Grid.Column="0">
             <StackPanel Orientation="Horizontal">
                 <TextBlock x:Name="OriginalRegular" Text="Original Color:" HorizontalAlignment="Center" VerticalAlignment="Center"/>
             </StackPanel>
@@ -42,7 +42,7 @@
             </StackPanel>
         </StackPanel>
 
-        <CheckBox Content="Press Accept Button" Grid.Row="1" Grid.Column="0" IsChecked="{Binding Source={x:Static properties:DebugSettings.Default},Path=pressAcceptButton}"/>
+        <CheckBox Content="Press Accept Button" Grid.Row="2" Grid.Column="0" IsChecked="{Binding Source={x:Static properties:DebugSettings.Default},Path=pressAcceptButton}"/>
 
         <Button x:Name="ApplyButton" Content="Apply" Grid.RowSpan="100" Grid.ColumnSpan="100" HorizontalAlignment="Right" VerticalAlignment="Bottom" Click="ApplyButton_Click"/>
     </Grid>
